--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@rocketnotes/server",
-  "type": "module",
   "scripts": {
     "dev": "nodemon ./src/server.js"
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
