--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
