--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@prisma/client": "^5.4.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
