--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
