--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "@prisma/client": "^5.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
