--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "start": "pm2-runtime start ecosystem.config.js --env production",
-    "build": "npx prisma migrate deploy",
+    "build": "npm i && npx prisma migrate deploy",
     "dev": "nodemon ./src/server.js"
   },
   "dependencies": {
