--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "pm2-runtime start ecosystem.config.js --env production",
     "build": "npm i && npx prisma migrate deploy",
+    "test": "vitest",
     "dev": "nodemon ./src/server.js"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
-    "prisma": "^5.4.2"
+    "prisma": "^5.4.2",
+    "vitest": "^0.34.6"
   }
 }
